Fix the overlay for members and groups on the public-facing homepage on mobile.

--- a/style.css
+++ b/style.css
@@ -145,6 +145,11 @@ table.rsvp-attendees-list-table td {
   display: block;
 }
 
+/* Allows the overlay to be fix on scroll in mobile, too.*/
+.public-home-section-overlay > .elementor-background-overlay {
+  background-attachment: fixed;
+}
+
 @media all and (min-width: 500px) {
   table.rsvp-attendees-list-table td {
     font-size: 1rem;
